set proxy_temp_path to /var/tmp and set proxy_max_temp_file_size to 4g

--- a/copy/opt/local/etc/nginx/nginx.conf
+++ b/copy/opt/local/etc/nginx/nginx.conf
@@ -59,9 +59,10 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $http_host;
             proxy_redirect off;
-            proxy_max_temp_file_size 102400;  # 100GB, see IMGAPI-127
+            proxy_max_temp_file_size 4096m;  # 100GB, see IMGAPI-127
             proxy_pass_header Server;
             proxy_pass http://goserver;
+            proxy_temp_path /var/tmp;
             break;
         }
 
