--- a/copy/opt/local/etc/nginx/nginx.conf
+++ b/copy/opt/local/etc/nginx/nginx.conf
@@ -26,6 +26,17 @@ http {
     }
 
     server {
+        listen 127.0.0.1:80;
+        server_name localhost;
+        location /nginx_status {
+            stub_status on;
+            access_log   off;
+            allow 127.0.0.1;
+            deny all;
+        }
+    }
+
+    server {
         listen 80;
         location /.well-known/acme-challenge/ { root /var/letsencrypt/acme/; }
         # Only redirect the root for HTTP. Want to discourage non-HTTPS access.
